# desktop

./: .gitignore
.github/workflows/: release.yml
apps/laisladeltrading/: package.json
apps/laisladeltrading-android/: capacitor.config.json  package.json
apps/laisladeltrading-ios/: capacitor.config.json  package.json
apps/laisladeltrading-ios/www/: index.html
apps/laisladeltrading/src-tauri/: Cargo.toml  tauri.conf.json
apps/laisladeltrading/src-tauri/icons/: icon.icns
apps/laisladeltrading/src-tauri/src/: main.rs
apps/learn/: package-lock.json  package.json
apps/learn-android/: capacitor.config.json  package.json
apps/learn-android/www/: index.html
apps/learn-ios/: capacitor.config.json  package.json
apps/learn-ios/www/: index.html
apps/learn/src-tauri/: Cargo.toml  tauri.conf.json
apps/learn/src-tauri/capabilities/: default.json
apps/learn/src-tauri/icons/: icon.icns
apps/learn/src-tauri/src/: main.rs
apps/traderpro/: package.json
apps/traderpro-android/: capacitor.config.json  package.json
apps/traderpro-android/www/: index.html
apps/traderpro-ios/: capacitor.config.json  package.json
apps/traderpro/src-tauri/: Cargo.toml  tauri.conf.json
apps/traderpro/src-tauri/capabilities/: default.json
apps/traderpro/src-tauri/icons/: icon.icns
apps/traderpro/src-tauri/src/: main.rs
apps/tribu13/: package.json
apps/tribu13-android/: capacitor.config.json  package.json
apps/tribu13-android/www/: index.html
apps/tribu13-ios/: package.json
apps/tribu13-ios/www/: index.html
apps/tribu13/src-tauri/: Cargo.toml  tauri.conf.json
(+2 files in other folders)
